cambios agregamos mensaje

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-    <p>Hola estudiantes este es mi sitio web sigueme en twiter @dakota,
-        si tiene dudas preguntame
+    <p>Hemos avanzado bastante , quien no lucha no esta condenado al exito tarde o temprano
+        seguir y nunca abandonar es la clave.
     </p>
 </body>
 </html>
